# continuum_tcc

./: README.md
continuum/continuum/: CMakeLists.txt  package.xml
continuum/continuum_description/: CMakeLists.txt  package.xml
continuum/continuum_description/config/: continuum.yaml  continuum_section_1.yaml  continuum_section_2.yaml  continuum_section_3.yaml
continuum/continuum_description/launch/: continuum_robot.launch.xml  continuum_sections.launch.xml  display.launch.xml
continuum/continuum_description/scripts/: createContinuumRobot.py  createContinuumSegment.py
continuum/continuum_description/urdf/: Section0.urdf.xacro  Section1.urdf.xacro  Section2.urdf.xacro  continuumRobot.urdf.xacro
continuum/continuum_manipulator/: CMakeLists.txt  package.xml
continuum/continuum_manipulator/include/continuum_manipulator/: continuum_robot.hpp  continuum_section.hpp
continuum/continuum_manipulator/launch/: continuum_manipulator.launch.xml  continuum_sections.launch.xml
continuum/continuum_manipulator/rviz/: display.rviz
continuum/continuum_manipulator/scripts/: pubCables.sh  pubConfig.sh  pubFrames.sh  pubJoints.sh  pubSecConfig.sh  pubSecTangledCables.sh  sine.py
continuum/continuum_manipulator/src/: cable_untangler.cpp  continuum_robot.cpp  continuum_section.cpp
continuum/continuum_msgs/: CMakeLists.txt  package.xml
continuum/continuum_msgs/msg/: CableStates.msg  ConfigStates.msg
continuum/trajectory_generator/: CMakeLists.txt  package.xml
continuum/trajectory_generator/config/: display.rviz
continuum/trajectory_generator/launch/: display.launch.xml  trajectory.launch.xml
continuum/trajectory_generator/src/: pose_trajectory_publisher.cpp
