<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>continuum</name>
  <version>0.0.0</version>
  <description>Metapackage for the continuum robot tools developed for my end of course project</description>
  <!--maintainer email="gustavocomerlato@gmail.com">Gustavo Comerlato Rodrigues</maintainer-->
  <maintainer email="gustavo.comerlato@ufrgs.br">Gustavo Comerlato Rodrigues</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>continuum_frames</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
