<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>continuum_manipulator</name>
  <version>0.0.0</version>
  <description>Nodo implementando um manipulador continuo (baseado no pacote ufrgs_wam)</description>
  <maintainer email="gustavo.comerlato@ufrgs.br">Gustavo Comerlato Rodrigues</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>continuum_description</depend>
  <depend>Eigen3</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>continuum_msgs</depend>

  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
